@@ -179,7 +179,7 @@ mark_msg_seen (gpointer data)
 
 	uids = g_ptr_array_new ();
 	g_ptr_array_add (uids, g_strdup (ml->cursor_uid));
-	mail_do_flag_messages (ml->folder, uids,
+	mail_do_flag_messages (ml->folder, uids, FALSE,
 			       CAMEL_MESSAGE_SEEN, CAMEL_MESSAGE_SEEN);
 	return FALSE;
 }
@@ -323,7 +323,7 @@ ml_tree_set_value_at (ETreeModel *etm, ETreePath *path, int col,
 
 	uids = g_ptr_array_new ();
 	g_ptr_array_add (uids, g_strdup (uid));
-	mail_do_flag_messages (message_list->folder, uids, 
+	mail_do_flag_messages (message_list->folder, uids, TRUE,
 			       CAMEL_MESSAGE_SEEN, CAMEL_MESSAGE_SEEN);
 
 	if (message_list->seen_id) {
